ub_parser/src/snapshots/ub_parser__parser__tests__expression.snap
---
source: ub_parser/src/parser.rs
assertion_line: 278
expression: r
---
(
    Some(
        File {
            name: "ub_parser__parser__tests",
            items: [
                FnDecl(
                    FnDecl {
                        name: "main",
                        params: [],
                        ret_ty: None,
                        span: 0..2,
                        body: [
                            Expr(
                                BinOp(
                                    BinOp {
                                        kind: Add,
                                        lhs: BinOp(
                                            BinOp {
                                                kind: Div,
                                                lhs: Literal(
                                                    Integer(
                                                        4,
                                                        13..14,
                                                    ),
                                                ),
                                                rhs: Call(
                                                    Call {
                                                        callee: Name(
                                                            "hallo",
                                                        ),
                                                        args: [],
                                                    },
                                                ),
                                                span: 0..0,
                                            },
                                        ),
                                        rhs: Literal(
                                            Integer(
                                                5,
                                                28..29,
                                            ),
                                        ),
                                        span: 0..0,
                                    },
                                ),
                            ),
                        ],
                    },
                ),
            ],
        },
    ),
    [],
)
