ub_parser/src/snapshots/ub_parser__parser__tests__function.snap
---
source: ub_parser/src/parser.rs
assertion_line: 284
expression: r
---
(
    Some(
        File {
            name: "ub_parser__parser__tests",
            items: [
                FnDecl(
                    FnDecl {
                        name: "foo",
                        params: [],
                        ret_ty: Some(
                            Ty {
                                span: 12..15,
                                kind: U64,
                            },
                        ),
                        span: 0..2,
                        body: [
                            Expr(
                                BinOp(
                                    BinOp {
                                        kind: Add,
                                        lhs: Literal(
                                            Integer(
                                                1,
                                                18..19,
                                            ),
                                        ),
                                        rhs: Literal(
                                            Integer(
                                                5,
                                                22..23,
                                            ),
                                        ),
                                        span: 0..0,
                                    },
                                ),
                            ),
                        ],
                    },
                ),
            ],
        },
    ),
    [],
)
